reverting back, still need to fix readability

--- a/wseCalculator/style.css
+++ b/wseCalculator/style.css
@@ -172,7 +172,7 @@ textarea:focus, input:focus{
 
 .form-control:focus {
     background: rgba(0, 0, 0, .6);
-    color: #e7dddd;
+    color: #fff9f9;
 }
 
 tr {
